fix: change gap in portfolio card. Adaptive in contancs section

--- a/css/about/about.css
+++ b/css/about/about.css
@@ -271,6 +271,10 @@
         padding: 50px 30px;
     }
 
+    .portfolio-card{
+        gap: 20px;
+    }
+
     .portfolio-card img{
         height: 180px;
         width: 240px;
